fixed overflow on board

--- a/ChessMate/src/CM/InterfaceBundle/Resources/public/css/general.css
+++ b/ChessMate/src/CM/InterfaceBundle/Resources/public/css/general.css
@@ -33,6 +33,7 @@ div.square {
 	float: left;
     height: 6em;
     width: 6em;
+    overflow: hidden;
 }
 
 div.light {
